Fix all text aligning centre on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,9 @@
 @import "{{ site.theme }}";
 
 @media only screen and (max-device-width: 480px) {
-    .container{
+    #header{
         text-align: center;
     }
-    body {text-align: left;}
 }
 
 header {
